--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- include helper library for matrix computation -->
     <script src="../libs/gl-matrix.js"></script>
-    <!-- include our framework with utilities -->
     <script src="../libs/framework.js"></script>
-    <!-- include the main script -->
+    <script src="nodes/providedNodes.js"></script>
+    <script src="nodes/customNodes.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
